<resources>
    <string name="app_name">WikiOLAP Android</string>
    <string name="charts_menu_title">Charts</string>
    <string name="dataset_title">Dataset Title:</string>
    <string name="dataset_menu_title">Datasets</string>
    <string name="profile_menu_title">Account</string>
    <string name="facebook_app_id">1489404787760189</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_datasets">Search for datasets...</string>
    <string name="search_for_charts">Search for charts...</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="line_chart">Line Chart</string>
    <string name="chart_type">Chart Type:</string>
    <string name="y_axis">Y Axis:</string>
    <string name="x_axis">X Axis:</string>
    <string name="aggregation_function">Aggregation Function:</string>
    <string name="sum">Sum</string>
    <string name="average">Average</string>
    <string name="logging_in">Logging in...</string>
    <string name="facebook_email_error">Error getting email from Facebook.</string>
    <string name="welcome_text">Welcome %1$s</string>
    <string name="columns">Columns:</string>
    <string name="dataset">Dataset</string>
    <string name="visualization">Visualization</string>
    <string name="dataset_description">Daset Description:</string>
    <string name="dataset_source">Source:</string>
    <string name="dataset_email">E-mail:</string>
    <string name="dataset_date">Uploaded at:</string>
    <string name="data_preview">Data Preview:</string>
    <string name="axis_settings">Axis Settings</string>
    <string name="appearance_settings">Appearance Settings</string>
    <string name="draw_x_lines">Draw X Lines</string>
    <string name="draw_y_lines">Draw Y Lines</string>
    <string name="dataset_number">Dataset %1$d</string>
    <string name="chose_dataset_to_join">Chose a dataset to join</string>
    <string name="visualization_creator">Visualization creator:</string>
    <string name="description">Description:</string>
    <string name="view_dataset_used">View dataset used</string>
    <string name="y_label">Y Label</string>
    <string name="x_label">X Label</string>
    <string name="login_required_message">You need to login to be able to view datasets and create visualizations.</string>
    <string name="login_required">Login Required</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="description_no_dots">Description</string>
    <string name="create_new_vis_dialog_title">Create and Close</string>
    <string name="create_new_vis_dialog_body">Are you sure you want to create this visualization? Changes aren\'t possible once it\'s been created.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="uploading">Uploading</string>
    <string name="uploading_visualization">Uploading visualization...</string>
    <string name="error">Error</string>
    <string name="uploading_error">An error happened while uploading your visualization. Please verify your connection and try again.</string>
    <string name="my_visualizations">My Visualizations:</string>
    <string name="remove_dataset">Remove Dataset</string>
    <string name="add_y_axis">Add Y Axis</string>
    <string name="remove">Remove</string>
    <string name="color">Color</string>
    <string name="x">X</string>
    <string name="error_creating_visualization">Error creating the visualization. There\'s either something wrong with the configuration or your some problem with your Internet. Tap to try again.</string>
    <string name="error_loading_datasets">Couldn\'t find any datasets. Try again or change the seach text.</string>
    <string name="ok">Ok</string>
    <string name="and">and</string>
    <string name="welcome_to_wikiolap">Welcome to WikiOLAP Android!</string>
    <string name="view_vis_onboarding">-To access our available visualizations, go to the first tab \"Visualizations\" and search for a name!</string>
    <string name="create_vis_onboarding">-On the second tab, you can search for datasets and access their details. It\'s insise the dataset\'s detail that you\'ll be able to create visualizations!</string>
    <string name="login_onboarding">-On the last tab, \"Account\", you\'ll be able to login. Only then will it be possible to create a visualization!</string>
    <string name="access_system">Access the System</string>
</resources>
