<ScrollView
    android:layout_below="@+id/top_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/create_chart_items_style"
            android:text="@string/chart_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            style="@style/create_chart_items_style"
            android:id="@+id/chartTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/create_chart_items_style"
            android:text="@string/y_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            style="@style/create_chart_items_style"
            android:id="@+id/yValueSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/create_chart_items_style"
            android:text="@string/x_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:nestedScrollingEnabled="false"
            android:id="@+id/xRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            style="@style/create_chart_items_style"
            android:text="@string/aggregation_function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/radio_sum"
                android:checked="true"
                style="@style/create_chart_items_style"
                android:text="@string/sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio_average"
                style="@style/create_chart_items_style"
                android:text="@string/average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>

</ScrollView>

