<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.feliperrm.wikiolap.fragments.ChartFragment">

    <FrameLayout
        android:elevation="3dp"
        android:background="@android:color/white"
        android:id="@+id/chart_root"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <FrameLayout
            android:id="@+id/chartHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_marginTop="12dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.ProgressBar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="24dp"
            android:visibility="gone" />

    </FrameLayout>

    <ScrollView
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/chart_root"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/create_chart_items_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualization_creator"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:orientation="horizontal"
                android:animateLayoutChanges="true"
                >

                <ProgressBar
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/creator_loader"
                    />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:layout_width="68dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/profile_placeholder"
                    app:civ_border="true"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="3dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/profile_shadow_color"
                    app:civ_shadow_radius="4"
                    android:id="@+id/profile_image"
                    />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Nome do Fulano"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                style="@style/create_chart_items_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                style="@style/create_chart_items_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="description here"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dataset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/view_dataset_used"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
